@@ -5,6 +5,8 @@
 * Patch 2963313: Enable setting .NET framework version (Justen Hyde)
 * Patch 2965229: Fix handling of  '+' symbol in file patterns (Rachel Blum)
 * Patch 2997449: Print configuration with target (ergosys)
+* Patch 2997452: Suppress gmake's "nothing to be done" message (ergosys)
+
 
 -------
  4.2.1
